--- a/app/src/main/res/layout/item_my_playlist.xml
+++ b/app/src/main/res/layout/item_my_playlist.xml
@@ -10,20 +10,13 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
-        <androidx.cardview.widget.CardView
-            style="@style/ImageCardViewStyle"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/playlist_cover"
+            style="@style/BorderBackgroundStyle"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="@dimen/item_margin">
-
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/playlist_cover"
-                style="@style/ImageViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </androidx.cardview.widget.CardView>
+            android:layout_marginVertical="@dimen/item_margin" />
 
         <LinearLayout
             android:layout_width="match_parent"
