--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -16,7 +16,7 @@
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/playlist_cover"
-                style="@style/ImageViewStyle"
+                style="@style/BorderBackgroundStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:foreground="?android:attr/selectableItemBackground" />
